--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
 		"react": "^16.3.1",
 		"react-dev-utils": "^5.0.1",
 		"react-dom": "^16.3.1",
-		"react-router": "^4.2.0",
-		"react-router-dom": "^4.2.2",
 		"resolve": "1.6.0",
 		"semantic-ui-react": "^0.79.1",
 		"style-loader": "0.19.0",
@@ -100,6 +98,8 @@
 		"extends": "react-app"
 	},
 	"devDependencies": {
-		"chance": "^1.0.13"
+		"chance": "^1.0.13",
+		"node-sass": "^4.8.3",
+		"sass-loader": "^6.0.7"
 	}
 }
