--- a/package.json
+++ b/package.json
@@ -3,51 +3,50 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"autoprefixer": "7.1.6",
-		"babel-core": "6.26.0",
-		"babel-eslint": "7.2.3",
-		"babel-jest": "20.0.3",
-		"babel-loader": "7.1.2",
-		"babel-preset-react-app": "^3.1.1",
+		"autoprefixer": "^9.1.5",
+		"babel-core": "^6.26.3",
+		"babel-jest": "23.6.0",
+		"babel-loader": "8.0.4",
+		"babel-preset-react-app": "^5.0.3",
 		"babel-runtime": "6.26.0",
 		"body-parser": "^1.18.2",
-		"case-sensitive-paths-webpack-plugin": "2.1.1",
-		"chalk": "1.1.3",
+		"case-sensitive-paths-webpack-plugin": "2.1.2",
+		"chalk": "2.4.1",
 		"cors": "^2.8.4",
-		"css-loader": "0.28.7",
-		"dotenv": "4.0.0",
+		"css-loader": "1.0.0",
+		"dotenv": "6.1.0",
 		"dotenv-expand": "4.2.0",
-		"eslint": "4.10.0",
-		"eslint-config-react-app": "^2.1.0",
-		"eslint-loader": "1.9.0",
-		"eslint-plugin-flowtype": "2.39.1",
-		"eslint-plugin-import": "2.8.0",
-		"eslint-plugin-jsx-a11y": "5.1.1",
-		"eslint-plugin-react": "7.4.0",
+		"eslint": "5.6.1",
+		"eslint-config-react-app": "^3.0.3",
+		"eslint-loader": "2.1.1",
+		"eslint-plugin-flowtype": "2.50.3",
+		"eslint-plugin-import": "2.14.0",
+		"eslint-plugin-jsx-a11y": "6.1.2",
+		"eslint-plugin-react": "7.11.1",
 		"express": "^4.16.3",
 		"extract-text-webpack-plugin": "3.0.2",
-		"file-loader": "1.1.5",
-		"fs-extra": "3.0.1",
-		"html-webpack-plugin": "2.29.0",
-		"jest": "20.0.4",
+		"file-loader": "2.0.0",
+		"fs-extra": "7.0.0",
+		"html-webpack-plugin": "3.2.0",
+		"jest": "23.6.0",
 		"object-assign": "4.1.1",
-		"postcss-flexbugs-fixes": "3.2.0",
-		"postcss-loader": "2.0.8",
-		"promise": "8.0.1",
+		"postcss-flexbugs-fixes": "4.1.0",
+		"postcss-loader": "3.0.0",
+		"promise": "8.0.2",
 		"raf": "3.4.0",
 		"react": "^16.3.1",
-		"react-dev-utils": "^5.0.1",
+		"react-dev-utils": "^6.0.4",
 		"react-dom": "^16.3.1",
-		"resolve": "1.6.0",
-		"semantic-ui-react": "^0.79.1",
-		"style-loader": "0.19.0",
-		"sw-precache-webpack-plugin": "0.11.4",
-		"url-loader": "0.6.2",
-		"validator": "^9.4.1",
-		"webpack": "3.8.1",
-		"webpack-dev-server": "2.9.4",
-		"webpack-manifest-plugin": "1.3.2",
-		"whatwg-fetch": "2.0.3"
+		"resolve": "1.8.1",
+		"semantic-ui-react": "^0.82.5",
+		"style-loader": "0.23.1",
+		"sw-precache-webpack-plugin": "0.11.5",
+		"url-loader": "1.1.1",
+		"validator": "^10.8.0",
+		"webpack": "4.20.2",
+		"webpack-dev-server": "3.1.9",
+		"webpack-manifest-plugin": "2.0.4",
+		"whatwg-fetch": "3.0.0"
 	},
 	"scripts": {
 		"server": "node ./server/server.js",
@@ -100,6 +99,6 @@
 	"devDependencies": {
 		"chance": "^1.0.13",
 		"node-sass": "^4.8.3",
-		"sass-loader": "^6.0.7"
+		"sass-loader": "^7.1.0"
 	}
 }
